--- a/php/image-files/usr/local/etc/php/conf.d/base.ini
+++ b/php/image-files/usr/local/etc/php/conf.d/base.ini
@@ -1,6 +1,8 @@
-; General settings
+; Required timezone
 date.timezone = UTC
-memory_limit=-1
+
+; General settings
+memory_limit=128M
 max_execution_time=30
 sys_temp_dir=/tmp
 upload_max_filesize=512M
@@ -25,9 +27,3 @@ opcache.enable_cli=1
 
 ; PHP language options
 short_open_tag=0
-
-; xdebug
-zend_extension = xdebug.so
-xdebug.idekey = PHPSTORM
-xdebug.remote_enable = 1
-xdebug.remote_connect_back = 1
