correccion de errores en docker-compose.yml

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ PHP_ENABLE_XDEBUG=0
 ## Built image name
 PHP_IMAGE_NAME=local/yiisoftware/yii2-php
 PHP_IMAGE_VERSION_SUFFIX=
+
+## Mysql
+#DB_ROOT_PASSWORD=root
+#DB_DATABASE=aulas
+#DB_USER=aulas_user
+#DB_PASSWORD=aulas_pass
