--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     php:
         build:
           dockerfile: Dockerfile-${DOCKERFILE_FLAVOUR}
-          context: 'docker/php'
+          context: 'php'
           args:
             - PHP_BASE_IMAGE_VERSION=${PHP_BASE_IMAGE_VERSION}
         image: ${PHP_IMAGE_NAME}:${PHP_BASE_IMAGE_VERSION}${PHP_IMAGE_VERSION_SUFFIX}
@@ -25,7 +25,7 @@ services:
         image: mysql:5.7
         volumes:
             - /var/lib/mysql
-            - ./docker/mysql/config/cnf:/etc/mysql/conf.d/config.conf
+            - ./mysql/config/cnf:/etc/mysql/conf.d/config.conf
         ports:
             - 3306:3306
         environment:
