Pasa variables de entorno por docker compose

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,8 @@ PHP_IMAGE_NAME=local/yiisoftware/yii2-php
 PHP_IMAGE_VERSION_SUFFIX=
 
 ## Mysql
-#DB_ROOT_PASSWORD=root
-#DB_DATABASE=aulas
-#DB_USER=aulas_user
-#DB_PASSWORD=aulas_pass
+DB_DATABASE=aulas
+DB_ROOT_PASSWORD=root
+DB_USER=aulas_user
+DB_PASSWORD=aulas_pass
+DB_MYSQL_DSN=mysql:host=db;dbname=
